Prevent horizontal scrollbar on hover

--- a/public/s/styles/scss/client.scss
+++ b/public/s/styles/scss/client.scss
@@ -1073,8 +1073,8 @@ body {
 		}
 
 		&.expanded {
-			max-height: 20em;
-			overflow: auto;
+            max-height: 20em;
+            overflow-y: scroll;
 
 			&:after { display: none; }
 		}
